# kaggle-mcp

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish-mcp.yml
mcpb/: manifest.json
scripts/: kaggle_mcp_setup.py
src/kaggle_mcp/: __init__.py  auth.py  config.py  eda.py  formatting.py  kaggle_client.py  prompts.py  resources.py  safety.py  server.py
src/kaggle_mcp/tools/: __init__.py  account.py  competitions.py  datasets.py  discussions.py  kernels.py  models.py
tests/: conftest.py  test_auth.py  test_formatting.py  test_integration_fake_api.py  test_kaggle_client.py  test_live_readonly.py  test_safety.py  test_server_smoke.py
