[project]
name = "kaggle-mcp"
version = "0.1.0"
description = "A safety-first MCP server connecting Claude to Kaggle (competitions, datasets, kernels, models)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "parkseokjune" }]
keywords = ["mcp", "kaggle", "claude", "llm", "model-context-protocol"]
dependencies = [
    "mcp[cli]>=1.27,<2",
    "kaggle>=1.6",
    "pydantic>=2",
    "pandas>=2",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# `uvx kaggle-mcp` and the client config `command` resolve to this entry point.
kaggle-mcp = "kaggle_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
